# aleo-prover-actor

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  doc.md
src/: client.rs  lib.rs  main.rs  prover.rs  statistic.rs  worker.rs
