[package]
name = "aleo-prover-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
once_cell = "1.10.0"
rand = "0.8.5"
rayon = "1.5.2"
tracing = "0.1.34"
tokio = { version = "1.18.0", features = ["full"] }
futures-util = {version = "0.3.21", features = ["sink"]}
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
ansi_term = "0.12.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-log = "0.1.2"
structopt = "0.3"

[dependencies.snarkvm]
# path = "../snarkVM"
git = "https://github.com/HarukaMa/snarkVM.git"
rev = "cfb283e3"

[dependencies.pool-prover-message]
git = "https://gitee.com/liusen_n/pool-message.git"
branch = "master"
