[package]
name = "aleo-prover-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
once_cell = "1.10.0"
rand = "0.8.5"
rayon = "1.5.2"
tracing = "0.1.34"
tokio = { version = "1.18.0", features = ["full"] }
futures-util = {version = "0.3.21", features = ["sink"]}
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
ansi_term = "0.12.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-log = "0.1.2"
structopt = "0.3"
rust-gpu-tools = {version = "0.6.0", optional = true }
log = "0.4.17"

[dependencies.snarkvm]
git = "https://github.com/liusen-adalab/snarkVM.git"
rev = "e872e7c8819f9cfc81317f5c7e76728726507ab4"

[dependencies.aleo-mine-protocol]
git = "https://github.com/liusen-adalab/aleo-mine-protocol.git"

[features]
cuda = ["snarkvm/cuda", "rust-gpu-tools"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
incremental = true
