[package]
edition = "2021"
name = "aleo-prover-actor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.57"
futures-util = {version = "0.3.21", features = ["sink"]}
log = "0.4.17"
once_cell = "1.10.0"
rand = "0.8.5"
rayon = "1.5.2"
structopt = "0.3"
tokio = {version = "1.18.0", features = ["full"]}
tokio-stream = "0.1.8"
tokio-util = "0.7.1"
tracing = "0.1.34"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dependencies.rust-gpu-tools]
default-features = false
features = ["cuda"]
optional = true
version = "0.6.0"

[dependencies.snarkvm]
git = "https://github.com/liusen-adalab/snarkVM.git"
rev = "e872e7c8819f9cfc81317f5c7e76728726507ab4"

[dependencies.aleo-mine-protocol]
git = "https://github.com/liusen-adalab/aleo-mine-protocol.git"

[features]
cuda = ["snarkvm/cuda", "rust-gpu-tools"]
default = []

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
panic = "abort"
